:sparkles: doc + UI for node copy
